Fixed top nav looking stupid on mobile

--- a/style.css
+++ b/style.css
@@ -300,6 +300,9 @@ a.is-active{
   color: #fff;
 }
 
+@media only screen and (max-width: 400px) {
+	.navlinks{float:left;}
+}
 
 /*End of Nav CSS*/
 
